[gd_scene load_steps=3 format=2]

[ext_resource path="res://Misc/extrude.tres" type="DynamicFont" id=1]
[ext_resource path="res://CompleteScene/RemoveMenu.gd" type="Script" id=2]

[node name="RemoveMenu" type="PopupDialog"]
margin_left = 176.0
margin_top = 96.0
margin_right = 464.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( -16, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 48.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Remove Mutation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationOne" type="Button" parent="."]
margin_left = 32.0
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationTwo" type="Button" parent="."]
margin_left = 32.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationThree" type="Button" parent="."]
margin_left = 96.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationFour" type="Button" parent="."]
margin_left = 96.0
margin_top = 80.0
margin_right = 144.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationFive" type="Button" parent="."]
margin_left = 160.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationSix" type="Button" parent="."]
margin_left = 160.0
margin_top = 80.0
margin_right = 208.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationSeven" type="Button" parent="."]
margin_left = 224.0
margin_top = 48.0
margin_right = 272.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationEight" type="Button" parent="."]
margin_left = 224.0
margin_top = 80.0
margin_right = 272.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keep" type="Button" parent="."]
margin_left = 32.0
margin_top = 112.0
margin_right = 272.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 1 )
text = "Keep Mutations"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MutationOne" to="." method="_on_MutationOne_pressed"]
[connection signal="pressed" from="MutationTwo" to="." method="_on_MutationTwo_pressed"]
[connection signal="pressed" from="MutationThree" to="." method="_on_MutationThree_pressed"]
[connection signal="pressed" from="MutationFour" to="." method="_on_MutationFour_pressed"]
[connection signal="pressed" from="MutationFive" to="." method="_on_MutationFive_pressed"]
[connection signal="pressed" from="MutationSix" to="." method="_on_MutationSix_pressed"]
[connection signal="pressed" from="MutationSeven" to="." method="_on_MutationSeven_pressed"]
[connection signal="pressed" from="MutationEight" to="." method="_on_MutationOne2_pressed"]
[connection signal="pressed" from="Keep" to="." method="_on_Keep_pressed"]
